--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@react-three/drei": "^10.7.6",
+        "@react-three/fiber": "^9.3.0",
         "@tailwindcss/vite": "^4.1.11",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
@@ -62,6 +64,7 @@
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
+        "three": "^0.180.0",
         "typescript": "^5.7.2",
         "vite": "^7.0.4",
         "ziggy-js": "^2.5.3"
