--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
         "embla-carousel-react": "^8.6.0",
         "framer-motion": "^12.23.12",
         "globals": "^15.14.0",
+        "gsap": "^3.13.0",
         "laravel-vite-plugin": "^2.0",
         "lucide-react": "^0.475.0",
+        "ogl": "^1.0.11",
         "react": "^19.0.0",
         "react-apexcharts": "^1.7.0",
         "react-chartjs-2": "^5.3.0",
