--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "react-apexcharts": "^1.7.0",
         "react-chartjs-2": "^5.3.0",
         "react-dom": "^19.0.0",
+        "react-icons": "^5.5.0",
         "swiper": "^11.2.10",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
