--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
+        "react-qr-code": "^2.0.18",
         "swiper": "^11.2.10",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
