--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
         "react-qr-code": "^2.0.18",
+        "recharts": "^3.2.1",
         "swiper": "^11.2.10",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
