--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "react-icons": "^5.5.0",
         "react-qr-code": "^2.0.18",
         "recharts": "^3.2.1",
+        "sonner": "^2.0.7",
         "swiper": "^11.2.10",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
